updating personal website

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Hobbies | Alicia Barrett</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        main{
+            height:100vh;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,11 +22,7 @@
     </header>
     <main>
         <h1>Hobbies</h1>
-        <p><ul>
-            <li>Yoga</li>
-            <li>Movies</li>
-            <li>Travel</li>
-        </ul></p>
+        <p>I really enjoy doing yoga, eating delicious food and exploring new cities.</p>
     </main>
     <footer>
         <p></p>
