--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <title>Home | Alicia Barrett</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        img {
+            padding:0%;
+        }
+    </style>
 </head>
 <body>
+    <script>
+        var name = prompt("What's your name?")
+        alert("Welcome " + name + "!")
+    </script>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">About Me</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="index.html" class="active">About Me</a></li>
+                <li><a href="skills.html"class="active">Skills</a></li>
+                <li><a href="hobbies.html"class="active">Hobbies</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +30,7 @@
             alt = "Alicia">
         </figure>
         <h1>Hi! I'm Alicia.</h1>
-        <p>By day, I support a community of donors in Prince Goerge's County, Maryland reach their philanthropic goals. In my free time, I'm learning how to build websites from scratch! To get in touch, you can email at <a href="aliciawyse@gmail.com">aliciawyse@gmail.com</a>.</p>
+        <p>By day, I support a community of donors reach their philanthropic goals. In my free time, I'm learning how to build websites from scratch! To get in touch, you can email at <a href="mailto:aliciawyse@gmail.com">aliciawyse@gmail.com</a>.</p>
         <h2>Fun Facts!</h2>
         <ul>
             <li>Southern California native</li>
