removed javascript prompt and alert

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <script>
-        var name = prompt("What's your name?")
-        alert("Welcome " + name + "!")
+/*        var name = prompt("What's your name?")*/
+/*        alert("Welcome " + name + "!")*/
     </script>
     <header>
         <nav>
@@ -36,7 +36,6 @@
             <li>Southern California native</li>
             <li>Proud Anteater - Zot Zot Zot!</li>
             <li>Washington, D.C. transplant</li>
-            <li>Natural hair lover</li>
         </ul>
     </main>
     <footer>
