--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Alicia Barrett</title>
+    <title>Home | Alicia B.</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         img {
