Made some changes to content

--- a/hobbies.html
+++ b/hobbies.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <h1>Hobbies</h1>
-        <p>I really enjoy doing yoga, eating delicious food and exploring new cities.</p>
+        <p>I enjoy yoga, traveling and cooking.</p>
     </main>
     <footer>
         <p></p>
