--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             alt = "Alicia">
         </figure>
         <h1>Hi! I'm Alicia.</h1>
-        <p>By day, I support a community of donors reach their philanthropic goals. In my free time, I'm learning how to build websites from scratch! To get in touch, you can email at <a href="mailto:aliciawyse@gmail.com">aliciawyse@gmail.com</a>.</p>
+        <p>I'm a donor services professional with a focus on creating inspiring events and utilizing donor information to help make philanthropy engaging and personalized. Currently, I work at The Community Foundation for the National Capital Region, where I support annual fundraisers, manage site visits, create engaging content for donors and manage donor data.<br> In my spare time, I'm learning software development so that I can start using technology skillfully in order to help make philanthropy work better.  To get in touch, you can email at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
         <h2>Fun Facts!</h2>
         <ul>
             <li>Southern California native</li>
             <li>Proud Anteater - Zot Zot Zot!</li>
-            <li>Washington, D.C. transplant</li>
+            <li>Recently read The Happiness Hypothesis by Jonathan Haidt</li>
         </ul>
     </main>
     <footer>
