added Coursera JS Course Certificate

--- a/skills.html
+++ b/skills.html
@@ -30,7 +30,7 @@ function normal(img) {
     <main>
         <h1>Skills</h1>
         <p>I'm building my web design skills everyday. Hover over the images below to get a snapshot of my most recent accomplishments. If you're interested in viewing my entire portfolio, check out my <a href="https://github.com/Aliciawyse/">GitHub page</a>.</p>
-        <img onmouseover="expand(this)" onmouseleave="normal(this)" src = "images/typing.png" width=45%
+        <img onmouseover="expand(this)" onmouseleave="normal(this)" src = "images/jscert.png" width=45%
             alt = "typing test results">
         <img onmouseover="expand(this)" onmouseleave="normal(this)" src = "images/htmlcert.png" width=45%
             alt = "html certificate">
