--- a/index.html
+++ b/index.html
@@ -2,44 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Alicia B.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alicia Barrett</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        img {
-            padding:0%;
-        }
-    </style>
 </head>
 <body>
-    <script>
-/*        var name = prompt("What's your name?")*/
-/*        alert("Welcome " + name + "!")*/
-    </script>
     <header>
         <nav>
-            <ul>
-                <li><a href="index.html" class="active">About Me</a></li>
-                <li><a href="skills.html"class="active">Skills</a></li>
-                <li><a href="hobbies.html"class="active">Hobbies</a></li>
-            </ul>
+            <a href="index.html" class="active">About Alicia</a>
+            <a href="projects.html"class="active">Projects</a>
         </nav>
     </header>
-    <main>
-        <figure>
-            <img src = "images/me.jpg"
-            alt = "Alicia">
-        </figure>
-        <h1>Hi! I'm Alicia.</h1>
-        <p>I'm a donor services professional with a focus on creating inspiring events and utilizing donor information to help make philanthropy engaging and personalized. Currently, I work at The Community Foundation for the National Capital Region, where I support annual fundraisers, manage site visits, create engaging content for donors and manage donor data.<br> In my spare time, I'm learning software development so that I can start using technology skillfully in order to help make philanthropy work better.  To get in touch, you can email at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
-        <h2>Fun Facts!</h2>
+    <section>
+        <h1>Hello!</h1>
+        <p>Welcome to Alicia's website. Currently, Alicia is teaching herself how to code through <a href="https://launchschool.com">Launch School</a>, a full stack online coding bootcamp. Prior to learning how to code full-time, Alicia worked as a donor services and development profressional where she organized donor engagement activities and supported a variety of development projects. To get in touch, you can email Alicia at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
+        <h2>More About Alicia's:</h2>
         <ul>
-            <li>Southern California native</li>
-            <li>Proud Anteater - Zot Zot Zot!</li>
-            <li>Recently read The Happiness Hypothesis by Jonathan Haidt</li>
+            <li><a href="https://www.linkedin.com/in/abarrettdc">LinkedIn</a></li>
+            <li><a href="projects.html">Infographics</a></li>
         </ul>
-    </main>
-    <footer>
-        <p></p>
-    </footer>
+    </section>
 </body>
 </html>
