Added CCS transitions to nav links

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="active">About Alicia</a>
-            <a href="projects.html"class="active">Projects</a>
+            <a href="index.html" class="focus">About Alicia</a>
+            <a href="projects.html"class="focus">Projects</a>
         </nav>
     </header>
     <section>
         <h1>Hello!</h1>
         <p>Welcome to Alicia's website. Currently, Alicia is teaching herself how to code through <a href="https://launchschool.com">Launch School</a>, a full stack online coding bootcamp. Prior to learning how to code full-time, Alicia worked as a donor services and development profressional where she organized donor engagement activities and supported a variety of development projects. To get in touch, you can email Alicia at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
-        <h2>More About Alicia's:</h2>
+        <h2>More about Alicia's:</h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/abarrettdc">LinkedIn</a></li>
             <li><a href="projects.html">Infographics</a></li>
