--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Alicia's Projects</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
     <header>
