--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section>
         <h1>Hello!</h1>
-        <p>Welcome to Alicia's website. Currently, Alicia is teaching herself how to code through <a href="https://launchschool.com">Launch School</a>, a full stack online coding bootcamp. Prior to learning how to code full-time, Alicia worked as a donor services and development profressional where she organized donor engagement activities and supported a variety of development projects. To get in touch, you can email Alicia at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
+        <p>Welcome to Alicia's website. Currently, Alicia is teaching herself how to code through <a href="https://launchschool.com">Launch School</a>, a full stack online coding bootcamp. Prior to learning how to code full-time, Alicia organized donor engagement activities and supported fundraising projects at The Community Foundation for the National Capital Region. To get in touch with Alicia, you can email her at <a href="mailto:alicia.barrett89@gmail.com">alicia.barrett89@gmail.com</a>.</p>
         <h2>More about Alicia's:</h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/abarrettdc">LinkedIn</a></li>
