--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,17 @@
         <p>While working for The Community Foundation for the National Capital Region, I created a few infographics to engage our donors using a tool called Piktochart.</p>
     </section>
     
-    <figure>
-        <img src ="images/infographic1.jpeg" alt="myinfographic" width=25%>
-    </figure>
-     <figure>
-        <img src ="images/infographic2.jpeg" alt="myinfographic" width=25%>
-    </figure>
+<div class="img">
+  <a target="_self" href="images/infographic1.jpeg">
+    <img src="images/infographic1.jpeg" alt="my 1st infographic" width=25%>
+  </a>
+</div>
+
+<div class="img">
+  <a target="_self" href="images/infographic2.jpeg">
+    <img src="images/infographic2.jpeg" alt="my 2nd infographic" width=25%>
+  </a>
+</div>
     
 </body>
 </html>
