edited video link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section>
         <h1>Who is Alicia?</h1>
-        <p>In 2012, I took a leap of faith when I moved from my hometown in southern California to start anew in Washington, D.C. Apparently I was going to be the next Olivia Pope, “<a href="https://youtu.be/Arpp-ZdrkXQ?t=1m56s">a gladiator in a suit</a>!" Since then, I’ve helped all sorts of organizations (a think-tank, bank and foundation) keep customers informed, feeling good and wanting to come back for more business.</p>
+        <p>In 2012, I took a leap of faith when I moved from my hometown in southern California to start anew in Washington, D.C. Apparently I was going to be the next Olivia Pope, “<a href="https://youtu.be/Arpp-ZdrkXQ">a gladiator in a suit</a>!" Since then, I’ve helped all sorts of organizations (a think-tank, bank and foundation) keep customers informed, feeling good and wanting to come back for more business.</p>
     </section>
     
     <section>
