--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     </header>
 
     <section>
-        <h1>Who is Alicia?</h1>
-        <p>In 2012, I took a leap of faith when I moved from my hometown in southern California to start anew in Washington, D.C. Apparently I was going to be the next Olivia Pope, “<a href="https://youtu.be/Arpp-ZdrkXQ">a gladiator in a suit</a>!" Since then, I’ve helped all sorts of organizations (a think-tank, bank and foundation) keep customers informed, feeling good and wanting to come back for more business.</p>
+        <h1>About Alicia</h1>
+        <p>In 2012, I took a leap of faith when I moved from my hometown in southern California to start anew in Washington, D.C. Apparently I was going to be the next "<a href="https://youtu.be/Arpp-ZdrkXQ">gladiator in a suit</a>!" Instead of fixing people's scandalous lives like Olivia Pope, I've helped bootstrapped nonprofits to big corporations improve their customer service so that they can keep their clients happy and informed.</p>
     </section>
     
     <section>
     <h1>Top-notch Customer Service</h1>
-    <p>Though I’ve worked with a unique set of organizations, the ability to keep customers satisfied has always been my primary focus. I’ve written materials to keep campaign members informed, organized events to engage donors and provided administrative support on trust and investment accounts of high net worth clients. Take a look at <a href="images/resume.pdf">my resume</a> for a more detailed look into my work experience.</p>
+    <p>I'm sure you know what bad customer service feels like, but do you know <a href="https://www.desk.com/success-center/bad-customer-service"> how much it costs</a>? My primary focus is to help companies save money byway of awesome customer service. Take a look at <a href="images/resume.pdf">my resume</a> to see what I mean.</p>
     </section>
     
     <section>
-    <h1>Educational Background</h1>
-    <p>I got my bachelor’s in anthropology and political science. Over the last year, web development and computer programming have been two of my favorite things to learn about. You can view the progress I’m making online at <a href="https://github.com/Aliciawyse">GitHub</a>.</p>
+    <h1>Looking Ahead</h1>
+    <p>I got my bachelor’s in anthropology and political science, but over the last year web development and computer programming have been two of my favorite things to learn about. Looking ahead, I want to help companies create the technology used to deliver awesome customer service. You can view the progress I’m making online at <a href="https://github.com/Aliciawyse">GitHub</a>.</p>
     </section>
 
 </body>
