more edits to content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <section>
     <h1>Top-notch Customer Service</h1>
-    <p>I'm sure you know what bad customer service feels like, but do you know <a href="https://www.desk.com/success-center/bad-customer-service"> how much it costs</a>? My primary focus is to help companies save money byway of awesome customer service. Take a look at <a href="images/resume.pdf">my resume</a> to see what I mean.</p>
+    <p>I'm sure you know what bad customer service feels like, but do you know <a href="https://www.desk.com/success-center/bad-customer-service"> how much it costs</a>? My primary focus is to help companies save money through awesome customer service. Take a look at <a href="images/resume.pdf">my resume</a> to see what I mean.</p>
     </section>
     
     <section>
