wip: making some updates

--- a/index.html
+++ b/index.html
@@ -18,18 +18,15 @@
     </header>
 
     <section>
-        <h1>About Alicia</h1>
-        <p>In 2012, I took a leap of faith when I moved from my hometown in southern California to start anew in Washington, D.C. Apparently I was going to be the next "<a href="https://youtu.be/Arpp-ZdrkXQ">gladiator in a suit</a>!" Instead of fixing people's scandalous lives like Olivia Pope, I've helped bootstrapped nonprofits to big corporations improve their customer service so that they can keep their clients happy and informed.</p>
-    </section>
-    
-    <section>
-    <h1>Top-notch Customer Service</h1>
-    <p>I'm sure you know what bad customer service feels like, but do you know <a href="https://www.desk.com/success-center/bad-customer-service"> how much it costs</a>? My primary focus is to help companies save money through awesome customer service. Take a look at <a href="images/resume.pdf">my resume</a> to see what I mean.</p>
-    </section>
-    
-    <section>
-    <h1>Looking Ahead</h1>
-    <p>I got my bachelor’s in anthropology and political science, but over the last year web development and computer programming have been two of my favorite things to learn about. Looking ahead, I want to help companies create the technology used to deliver awesome customer service. You can view the progress I’m making online at <a href="https://github.com/Aliciawyse">GitHub</a>.</p>
+        <h1>Alicia Barrett</h1>
+        <p>Hi, I'm Alicia (pronounced Ah-lee-see-ah)! My mission as a web developer is to build software that improves the way people live & collaborate.</p>
+
+         <p>I'm currently a student in Georgia Tech's Coding Boot Camp learning full stack web development. </p>
+
+        <a href="https://github.com/Aliciawyse">GitHub</a><br>
+        <a href="https://codepen.io/alibar/">CodePen</a><br>
+        <a href="images/resume2017.pdf">Resume</a>
+
     </section>
 
 </body>
