updating personal website

--- a/index.html
+++ b/index.html
@@ -3,31 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alicia's Professional Website - home page</title>
+    <title>Alicia's Website</title>
+    <!--Bulma css framework-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css">
+    <!--Font awesome-->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
-    
-    <header>
-        <nav>
-            <a href="mailto:alicia.barrett89@gmail.com">Contact</a>
-        </nav>
-    </header>
 
-    <section>
-        <h1>Alicia Barrett</h1>
-        <p>Hi, I'm Alicia (pronounced Ah-lee-see-ah)! My mission as a web developer is to build software that improves the way people live & collaborate.</p>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <h1>Alicia Barrett</h1>
+        </div>
+    </nav>
 
-         <p>I'm currently a student in Georgia Tech's Coding Boot Camp learning full stack web development. </p>
+    <div id="bio" class="tile is-ancestor">
+        <div  class="tile is-vertical is-6 container">
 
-        <a href="https://github.com/Aliciawyse">GitHub</a><br>
-        <a href="https://codepen.io/alibar/">CodePen</a><br>
-        <a href="images/resume2017.pdf">Resume</a>
+            <div class="tile is-parent" >
+                <article class="tile is-child notification">
+                    <p class="title">Hello!</p>
+                    <p class="subtitle">A little about me...</p>
+                    <div class="content">
+                        I am part of a small team engineering team at Juice Analytics. I perform bug fixes and improvements to existing features on the front-end of their core platform. This also involves updating tests or writing new tests for the code I write.
 
-    </section>
+                        When I'm not fixing bugs or adding improvements, I've pair programmed on the revamp of an internal tool built with Yeoman that improved workflow so that the team can spend less time on process. I've also contributed to platform documentation.
+
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+
+    <!--<section>-->
+        <!--<h1>Alicia Barrett</h1>-->
+        <!--<p>Hi, I'm Alicia (pronounced Ah-lee-see-ah)! My mission as a web developer is to build software that improves the way people live & collaborate.</p>-->
+
+         <!--<p>I'm currently a student in Georgia Tech's Coding Boot Camp learning full stack web development. </p>-->
+
+        <!--<a href="https://github.com/Aliciawyse">GitHub</a><br>-->
+        <!--<a href="https://codepen.io/alibar/">CodePen</a><br>-->
+        <!--<a href="images/resume2017.pdf">Resume</a>-->
+
+    <!--</section>-->
 
 </body>
 
