--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
                     <p class="title">Hello!</p>
                     <p class="subtitle">A little about me...</p>
                     <div class="content">
-                        I am part of a small team engineering team at Juice Analytics. I perform bug fixes and improvements to existing features on the front-end of their core platform. This also involves updating tests or writing new tests for the code I write.
-
-                        When I'm not fixing bugs or adding improvements, I've pair programmed on the revamp of an internal tool built with Yeoman that improved workflow so that the team can spend less time on process. I've also contributed to platform documentation.
-
+                        I'm part of a small engineering team at Juice Analytics. I perform bug fixes and improvements to existing features on the front-end of their core platform.
                     </div>
                 </article>
             </div>
